# BIP66

./: .codecov.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  bip66.hpp  ccpp.yml  keywords.txt  library.json  library.properties  platformio.ini
.circleci/: config.yml  install_platform_io.sh  script_arduino.sh  script_desktop.sh
.github/workflows/: ccpp.yml  ci.yml  main.yml
cmake/: GTest.cmake
examples/BIP66/: BIP66.ino  hex.h
src/: CMakeLists.txt  bip66.cpp  bip66.h  bip66.hpp
test/: CMakeLists.txt  bip66.cpp  platformio.ini  test_cases.hpp
test/embedded/: main.cpp
test/iot/: main.cpp
test/iot/gtest/: gtest.h
test/src/: bip66.cpp
